--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,17 +6,9 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-    <ScrollView
+    <ListView
+        android:id="@+id/act1_ListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"></ListView>
 
-        <LinearLayout
-            android:id="@+id/act1_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-        </LinearLayout>
-
-    </ScrollView>
 </FrameLayout>
